2005-04-17  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Whine if a perl-versioned package installs a file
	whose path does not encode the version.

2005-04-16  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm, PkgVersion.pm, Services.pm: Overhauled enforce_gcc
	error messages.

2005-04-16  Chris Zubrzycki  <beren12@users.sourceforge.net>

	* PkgVersion.pm: Allow passing of TERM to build env (colorgcc)

2005-04-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Services.pm: Improved error when no gcc_select present.

2005-04-15  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: No interruption of buildlock pkg lookup

2005-04-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: add a default for CXXFLAGS for recent distributions

2005-04-08  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Optimize 'fink list' with globs or multiple args.

2005-04-05  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: warn but continue if any exceptions
	during update*_db

2005-04-05  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Started work for auto-switching depends inbetween builds

2005-04-04  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: Check defined($FH) not defined(fileno($FH))

2005-04-04  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: Only enforce non-concurrent indexing when
	cache is writable.

2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: Switch to flock()-based concurrent-index lock

2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* Package.pm, Shlibs.pm: only use concurrent-index-run results if
	we have Storable

2005-03-25  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix PostInst creation of /Applications/Fink
	symlinks (patch by AIDA Shinra)

2005-03-23  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Use the gcc* FAQ for all gcc* Homepages.

2005-03-23  Daniel Macks  <dmacks@netspace.org>
